Fix file paths and typos in index.html
Updated file paths and corrected typos in the HTML content.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyPortfolio</title>
-    <link rel="Icon" href="/Day3/flag.png" />
-    <link rel="stylesheet" href="/Day3/Myportfolio.css" />
+    <link rel="Icon" href="flag.png" />
+    <link rel="stylesheet" href="Myportfolio.css" />
     
   </head>
   <body>
     <header>
-      <video class="bgvd" autoplay loop muted src="/Day3/ILLA BHASKARARAO.mp4"></video>
+      <video class="bgvd" autoplay loop muted src="ILLA BHASKARARAO.mp4"></video>
       <nav>
         <ul class="navi">
           <li class="navlist"><a class="listitem" href="#me">About me</a></li>
@@ -18,12 +18,12 @@
           <li class="navlist"><a class="listitem" href="#Project">Projects</a></li>
           <li class="navlist"><a class="listitem" href="#Contact">Contact</a></li>
           <li class="navlist">
-            <a class="listitem" href="/Day3/ILLA BHASKARARAO_6301207309.pdf" target="_blank"
+            <a class="listitem" href="ILLA BHASKARARAO_6301207309.pdf" target="_blank"
               >View Download</a
             >
           </li>
           <li class="navlist">
-            <a class="listitem" href="/Day3/ILLA BHASKARARAO_6301207309.pdf" download
+            <a class="listitem" href="ILLA BHASKARARAO_6301207309.pdf" download
               >Download Resume</a
             >
           </li>
@@ -128,3 +128,4 @@
     </footer>
   </body>
 </html>
+
